contact us page was  added

--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Index</title>
+		<title>Contact Us - Ticket App</title>
 		<meta charset="utf-8">
 		<meta name='viewport' content="width=device-width, initial-scale=1">
 	</head>
 	<body>
-		<h1>Ticket here...</h1>
-		<p>This new line was added today</p>
+		<h1>Contact Us</h1>
+		<p>I am a new content</p>
 	</body>
 </html>
